(hopefully) fixed alignment issues with the nav bar

--- a/lab/stylesLab.css
+++ b/lab/stylesLab.css
@@ -5,7 +5,7 @@
 }
 
 nav {
-    align-items: center;
+    align-content: center;
     /* font-size: idk, experiment here */
     padding: 10px 20px;
     position: relative;
